fix: make checkbox label aligned

--- a/css/report-bugs.css
+++ b/css/report-bugs.css
@@ -83,3 +83,8 @@
   content: " (optional)";
   color: var(--primaryFgDark);
 }
+
+.checkbox-container {
+  display: flex;
+  gap: 8px;
+}
